<resources>
    <string name="app_name">Universum</string>
    <string name="action_settings">Settings</string>

    <string name="select_all">Все</string>
    <string name="select_vk">ВК</string>
    <string name="select_telegram">Телеграм</string>

    <string name="add">Добавить</string>

    <string name="vk_login">Логин:</string>
    <string name="vk_password">Пароль:</string>

    <string name="telegram_phone">Номер телефона:</string>
    <string name="telegram_code">Код из смс:</string>

    <string name="message_hint">Введите сообщение</string>
</resources>
