<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/vk_login"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"/>

    <EditText
        android:id="@+id/vk_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/vk_password"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/vk_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/vk_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:text="Error message"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/vk_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/add"
        android:layout_gravity="bottom"/>
</LinearLayout>