<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/select_all"
                android:text="@string/select_all"
                android:textSize="@dimen/select_size"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/select_color"/>

            <TextView
                android:id="@+id/select_vk"
                android:text="@string/select_vk"
                android:textSize="@dimen/select_size"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/select_telegram"
                android:text="@string/select_telegram"
                android:textSize="@dimen/select_size"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/chats_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addChatFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/colorAccent"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"/>

</android.support.design.widget.CoordinatorLayout>